# modo_energy

./: .gitignore  ERCOT_BESS.ipynb  README.md  analysis.ipynb  main.py  periods.ipynb  prophet.ipynb  pyproject.toml  settlement-prices-scratch.ipynb  weather_scratch.ipynb
modo_energy_client/: modo_energy_api_client.py
noaa/: noaa_snowflake.py
