[project]
name = "modo-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandera>=0.31.1",
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "tqdm>=4.68.2",
]
